--- a/Sections/02_Abstract.Rmd
+++ b/Sections/02_Abstract.Rmd
@@ -8,6 +8,12 @@ output:
 
 <!-- Remember, It can't be longer than 350 words! Currently way over-->
 
-DNA methylation (DNAm) is an epigenetic marker that controls gene expression in a highly cell-specific manner. Placental DNAm has been studied under various contexts, however, several sources of variation remain uncharacterized. Before we are able to understand how placental DNAm contributes to  important health-relevant contexts, we must develop an understanding of the underlying normal variation that occurs in the placental methylome. Ethnicity and genetics, for example, are established as significant contributors to DNAm, in general. DNAm is also highly cell-specific, and the placenta is a heterogeneous tissue comprised of several distinct cell populations. However, due to difficulty of isolating cell populations, most placental DNAm research is conducted on whole placental chorionic villi tissue. Isolating placental tissue without contamination from maternal tissue, such as decidua and blood, is difficult, especially in earlier gestation samples where sampling enough tissue is difficult.
+DNA methylation (DNAm) is an epigenetic mark that can control or reflect gene expression in a highly cell-specific manner. 
+Placental DNAm has been studied in various contexts, however, several sources of variation remain uncharacterized. 
+Before we are able to understand how placental DNAm contributes to  important health-relevant contexts, we must develop an understanding of the underlying normal variation that occurs in the placental methylome. 
+For example, a high proportion of variation in DNAm can vary by ethnicity and genotype.
+DNAm is also highly cell-specific, and the placenta is a heterogeneous tissue comprised of several distinct cell populations. 
+However, due to difficulty of isolating cell populations, most placental DNAm research is conducted on whole placental chorionic villi tissue. 
+Isolating placental tissue without contamination from maternal tissue, such as decidua and blood, can be difficult, especially in earlier gestation samples where sampling enough tissue is difficult.
 
 In this thesis, I hypothesize that a large proportion of the variation in placental DNAm can attributed to ethnicity, genetic ancestry, cell composition, cell-specific effects, and the presence of maternal cells. Using high density DNAm microarray profiling, and open-access genomic data repositories, I assessed these various factors in a variety of placental samples with various phenotypes. I found that ethnicity and genetic ancestry can significant contribute to placental DNAm variation in samples containing self-reports of ethnicity of Caucasian, East Asian, and African American populations. Further, I found that it is possible to predict ethnicity and genetic  with high accuracy and reliability from placental DNAm. Another major source of variation is cell-specific DNAm, which I characterized from placental samples of first trimester and term pregnancies. I found that trophoblast and Hofbauer cells are highly epigenetically distinct, and many placental epigenetic features are conserved in trophoblasts but not always in other placental cells. I developed a reference to estimate cell composition from placental chorionic villi DNAm. Lastly, I developed an approach to estimate maternal cells present in chorionic villi samples, using DNAm, and found several previously published placental DNAm studies to contain maternally-contaminated samples. Overall, I contributed to our understanding of placental DNAm, and have provided bioinformatic tools for future placental DNAm research.
