--- a/Sections/04_Preface.Rmd
+++ b/Sections/04_Preface.Rmd
@@ -6,43 +6,63 @@ output:
     number_sections: yes
 ---
 
-<!-- This is mandatory! -->
-
-Parts of this dissertation have been published and include work performed by collabortors:
+Parts of this dissertation have been published and include work performed by collaborators.
 
 **Chapter 1**
 
-A version of a part of Chapter 1 has been published as a book chapter. Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta. In: Leung PCK, Qiao J, editors. Human Reproductive and Prenatal Genetics. Academic Press; 2019. p. 293–311.
-
+Parts of Chapter 1 subsection "DNA methylation" has been published as a book chapter in *Human Reproductive and Prenatal Genetics*.
+Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta.
+In: Leung PCK, Qiao J, editors.
+Human Reproductive and Prenatal Genetics.
+Academic Press; 2019.
+p. 293--311.
 Copyright © 2019 Elsevier Inc.
 
-A version of a part of Chapter 1 has been accepted as publication as another book chapter.
+A version of Chapter 1 subsection "Placental DNA methylation variation across human populations" has been published en *BMC Epigenetics & Chromatin*.
+Yuan, V., Price, E.M., Del Gobbo, G.
+et al.
+Accurate ethnicity prediction from placental DNA methylation data.
+Epigenetics & Chromatin 12, 51 (2019).
+© Yuan *et al.* 2019, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
 
-Parts of the introduction/background sections of the following two articles have been included as part of chapter 1:
-
-A version of chapter 2 has be published in BMC Epigenetics & Chromatin. Yuan, V., Price, E.M., Del Gobbo, G. et al. Accurate ethnicity prediction from placental DNA methylation data. Epigenetics & Chromatin 12, 51 (2019).
-© Yuan _et al._ 2019, under the Creative Commons Attribution 4.0 International 
-License (http://creativecommons.org/licenses/by/4.0/).
-
-Yuan, V., Hui, D., Yin, Y. et al. Cell-specific characterization of the placental methylome. BMC Genomics 22, 6 (2021).
-© Yuan _et al._ 2021, under the Creative Commons Attribution 4.0 International 
-License (http://creativecommons.org/licenses/by/4.0/).
+A version of Chapter 1 subsection "Epigenetics and placenta cell types" has been published en *BMC Genomics*.
+Yuan, V., Hui, D., Yin, Y.
+et al.
+Cell-specific characterization of the placental methylome.
+BMC Genomics 22, 6 (2021).
+© Yuan *et al.* 2021, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
 
 **Chapter 2**
 
-A version of chapter 2 has be published in BMC Epigenetics & Chromatin. Yuan, V., Price, E.M., Del Gobbo, G. et al. Accurate ethnicity prediction from placental DNA methylation data. Epigenetics & Chromatin 12, 51 (2019).
+A version of chapter 2 has be published in BMC Epigenetics & Chromatin.
+Yuan, V., Price, E.M., Del Gobbo, G.
+et al.
+Accurate ethnicity prediction from placental DNA methylation data.
+Epigenetics & Chromatin 12, 51 (2019).
 
-Project and experimental design was done by Dr. Magda Price, Dr. Giulia Del Gobbo, and professor Wendy Robinson. I conducted data quality control and preprocessing, performed statistical analysis on ethnicity and DNA methylation, trained machine learning models on the data, and wrote the manuscript. Professor Sara Mostafavi provided feedback on statistical analyses. Professor Brian Cox, Dr. Alexandra M. Binder, professor Karin B. Michels, and professor Carmen Marsit provided additional placental data, and helped write the manuscript. All authors participated in manuscript revisions. Data, text, figures and 
-tables published in this article are contained in Chapter 2.
+Project and experimental design was done by Dr. Magda Price, Dr. Giulia Del Gobbo, and professor Wendy Robinson.
+I conducted data quality control and preprocessing, performed statistical analysis on ethnicity and DNA methylation, trained machine learning models on the data, and wrote the manuscript.
+Professor Sara Mostafavi provided feedback on statistical analyses.
+Professor Brian Cox, Dr. Alexandra M. Binder, professor Karin B. Michels, and professor Carmen Marsit provided additional placental data, and helped write the manuscript.
+All authors participated in manuscript revisions.
+Data, text, figures and tables published in this article are contained in Chapter 2.
 
-© Yuan _et al._ 2019, under the Creative Commons Attribution 4.0 International 
-License (http://creativecommons.org/licenses/by/4.0/).
+© Yuan *et al.* 2019, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
 
 **Chapter 3**
 
-A version of chapter 3 has be published in BMC Genomics. Yuan, V., Hui, D., Yin, Y. et al. Cell-specific characterization of the placental methylome. BMC Genomics 22, 6 (2021).
+A version of chapter 3 has be published in BMC Genomics.
+Yuan, V., Hui, D., Yin, Y.
+et al.
+Cell-specific characterization of the placental methylome.
+BMC Genomics 22, 6 (2021).
 
-Placental samples were ascertained through the professor Robinson and professor Beristain labs. Professor Wendy Robinson, professor Alex Beristain, Dr. Maria Penaherrera design the project. I performed analysis of the data and wrote the manuscript. Desmond Hui helped refine the cell-sorting protocol and collected samples, with help of Dr. Maria Penaherrera and professor Alex Beristain. Yifan Yin and I created the interactive data exploration app. All authors helped revise the final manuscript. The data, text, figures, and tables published in this article are included in Chapter 3.
+Placental samples were ascertained through the professor Robinson and professor Beristain labs.
+Professor Wendy Robinson, professor Alex Beristain, Dr. Maria Penaherrera design the project.
+I performed analysis of the data and wrote the manuscript.
+Desmond Hui helped refine the cell-sorting protocol and collected samples, with help of Dr. Maria Penaherrera and professor Alex Beristain.
+Yifan Yin and I created the interactive data exploration app.
+All authors helped revise the final manuscript.
+The data, text, figures, and tables published in this article are included in Chapter 3.
 
-© Yuan _et al._ 2021, under the Creative Commons Attribution 4.0 International 
-License (http://creativecommons.org/licenses/by/4.0/).
+© Yuan *et al.* 2021, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
