--- a/Sections/04_Preface.Rmd
+++ b/Sections/04_Preface.Rmd
@@ -10,59 +10,67 @@ Parts of this dissertation have been published and include work performed by col
 
 **Chapter 1**
 
-Parts of Chapter 1 subsection "DNA methylation" has been published as a book chapter in *Human Reproductive and Prenatal Genetics*.
-Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta.
-In: Leung PCK, Qiao J, editors.
-Human Reproductive and Prenatal Genetics.
-Academic Press; 2019.
-p. 293--311.
-Copyright © 2019 Elsevier Inc.
+Parts of Chapter 1 subsection "DNA methylation" has been submitted to be published as a book chapter by V Yuan and WP Robinson (2022).
+
+
+Parts of Chapter 1 subsection "Epigenetics and placenta cell types" have been published as a book chapter in *Human Reproductive and Prenatal Genetics*.
+Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL (2019) Chapter 13 - Epigenetic Modifications in the Human Placenta. 
+In: Leung PCK, Qiao J (eds) Human Reproductive and Prenatal Genetics. 
+Academic Press, pp 293–311
+Copyright © 2019 Elsevier Inc. 
+I wrote the section on titled "The epigenetic profiles of placental cell types".
+WP Robinson wrote the Overview and introduction sections. 
+MS Peñaherrera  wrote the "Monoallelic gene inactivation" section.
+SL Wilson and C Konwar wrote the Placental Pathology and "Clinical applications" section.
+All authors reviewed and edited the final manuscript.
 
 A version of Chapter 1 subsection "Placental DNA methylation variation across human populations" has been published en *BMC Epigenetics & Chromatin*.
-Yuan, V., Price, E.M., Del Gobbo, G.
-et al.
-Accurate ethnicity prediction from placental DNA methylation data.
-Epigenetics & Chromatin 12, 51 (2019).
+Yuan V, Price EM, Del Gobbo G, Mostafavi S, Cox B, Binder AM, Michels KB, Marsit C, Robinson WP (2019) Accurate ethnicity prediction from placental DNA methylation data. 
+Epigenetics & Chromatin 12:51. 
+https://doi.org/10.1186/s13072-019-0296-3
 © Yuan *et al.* 2019, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
+V Yuan, EM Price, G Del Gobbo, S Mostafavi, and WP Robinson contributed to the design of the study. 
+V Yuan, EM Price, and G Del Gobbo performed all data analysis.
+EM Price, G Del Gobbo, S Mostafavi, Cox B, Binder AM, Michels KB, Marsit C, Robinson WP helped generate and contribute the data. 
+EMP and WR conceived of the study. 
+All authors approved and contributed to the writing of the final manuscript. 
+All authors read and approved the final manuscript.
 
 A version of Chapter 1 subsection "Epigenetics and placenta cell types" has been published en *BMC Genomics*.
-Yuan, V., Hui, D., Yin, Y.
-et al.
-Cell-specific characterization of the placental methylome.
-BMC Genomics 22, 6 (2021).
+Yuan V, Hui D, Yin Y, Peñaherrera MS, Beristain AG, Robinson WP (2021) Cell-specific characterization of the placental methylome. BMC Genomics 22:6.
+https://doi.org/10.1186/s12864-020-07186-6
 © Yuan *et al.* 2021, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
+WP Robinson, AG Beristain, and MS Peñaherrera contributed to project design. V Yuan performed analysis of data, and wrote manuscript. 
+D Hui standardized and performed tissue and cell collection supported by AGB, MSP and VY. 
+D Hui, MS Peñaherrera, V Yuan, ran methylation arrays. 
+Y Yin helped V Yuan developed interactive data exploration app. 
+All authors read, edited, and approved the final manuscript.
 
 **Chapter 2**
 
 A version of chapter 2 has be published in BMC Epigenetics & Chromatin.
-Yuan, V., Price, E.M., Del Gobbo, G.
-et al.
-Accurate ethnicity prediction from placental DNA methylation data.
-Epigenetics & Chromatin 12, 51 (2019).
-
-Project and experimental design was done by Dr. Magda Price, Dr. Giulia Del Gobbo, and professor Wendy Robinson.
-I conducted data quality control and preprocessing, performed statistical analysis on ethnicity and DNA methylation, trained machine learning models on the data, and wrote the manuscript.
-Professor Sara Mostafavi provided feedback on statistical analyses.
-Professor Brian Cox, Dr. Alexandra M. Binder, professor Karin B. Michels, and professor Carmen Marsit provided additional placental data, and helped write the manuscript.
-All authors participated in manuscript revisions.
-Data, text, figures and tables published in this article are contained in Chapter 2.
-
+Yuan V, Price EM, Del Gobbo G, Mostafavi S, Cox B, Binder AM, Michels KB, Marsit C, Robinson WP (2019) Accurate ethnicity prediction from placental DNA methylation data. 
+Epigenetics & Chromatin 12:51. 
+https://doi.org/10.1186/s13072-019-0296-3
 © Yuan *et al.* 2019, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
+V Yuan, EM Price, G Del Gobbo, S Mostafavi, and WP Robinson contributed to the design of the study. 
+V Yuan, EM Price, and G Del Gobbo performed all data analysis.
+EM Price, G Del Gobbo, S Mostafavi, Cox B, Binder AM, Michels KB, Marsit C, Robinson WP helped generate and contribute the data. 
+EMP and WR conceived of the study. 
+All authors approved and contributed to the writing of the final manuscript. 
+All authors read and approved the final manuscript.
+
+Data, text, figures and tables published in this article are contained in Chapter 2.
 
 **Chapter 3**
 
 A version of chapter 3 has be published in BMC Genomics.
-Yuan, V., Hui, D., Yin, Y.
-et al.
-Cell-specific characterization of the placental methylome.
-BMC Genomics 22, 6 (2021).
-
-Placental samples were ascertained through the professor Robinson and professor Beristain labs.
-Professor Wendy Robinson, professor Alex Beristain, Dr. Maria Penaherrera design the project.
-I performed analysis of the data and wrote the manuscript.
-Desmond Hui helped refine the cell-sorting protocol and collected samples, with help of Dr. Maria Penaherrera and professor Alex Beristain.
-Yifan Yin and I created the interactive data exploration app.
-All authors helped revise the final manuscript.
-The data, text, figures, and tables published in this article are included in Chapter 3.
-
+Yuan V, Hui D, Yin Y, Peñaherrera MS, Beristain AG, Robinson WP (2021) Cell-specific characterization of the placental methylome. BMC Genomics 22:6.
+https://doi.org/10.1186/s12864-020-07186-6
 © Yuan *et al.* 2021, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
+WP Robinson, AG Beristain, and MS Peñaherrera contributed to project design. V Yuan performed analysis of data, and wrote manuscript. 
+D Hui standardized and performed tissue and cell collection supported by AGB, MSP and VY. 
+D Hui, MS Peñaherrera, V Yuan, ran methylation arrays. 
+Y Yin helped V Yuan developed interactive data exploration app. 
+All authors read, edited, and approved the final manuscript.
+The data, text, figures, and tables published in this article are included in Chapter 3.
