Introduction - overview, rewrote end statement

--- a/References/references.bib
+++ b/References/references.bib
@@ -2453,3 +2453,20 @@ PMCID: PMC5097126}
 	doi = {10.1186/s13059-019-1824-y},
 	url = {https://doi.org/10.1186/s13059-019-1824-y}
 }
+
+@article{jang2017,
+	title = {CpG and Non-CpG Methylation in Epigenetic Gene Regulation and Brain Function},
+	author = {{Jang}, {Hyun Sik} and {Shin}, {Woo Jung} and {Lee}, {Jeong Eon} and {Do}, {Jeong Tae}},
+	year = {2017},
+	month = {06},
+	date = {2017-06},
+	journal = {Genes},
+	pages = {148},
+	volume = {8},
+	number = {6},
+	doi = {10.3390/genes8060148},
+	url = {https://www.mdpi.com/2073-4425/8/6/148},
+	note = {Number: 6
+Publisher: Multidisciplinary Digital Publishing Institute},
+	langid = {en}
+}
